# pode

./: .bumpversion.cfg  .bumpversion.toml  .env  .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.cfg  setup.py
.devcontainer/: devcontainer.json  setup_user.sh
.github/workflows/: github-actions.yml
docs/: requirements.txt
docs/source/: conf.py  hints.rst  index.rst  pode.rst  utils.rst
pode/: __init__.py  geometry_utils.py  hints.py  pode.py  utils.py
tests/: configs.py  conftest.py  utils.py
tests/geometry_utils_tests/: test_are_touching.py  test_is_convex.py  test_is_on_the_left.py  test_join_to_convex.py  test_line_offset.py  test_midpoint.py  test_neighbors.py  test_neighbors_and_sides.py  test_right_left_parts.py  test_right_part.py  test_segments.py  test_side_touches.py  test_to_convex_parts.py  test_to_graph.py  test_triangulation.py
tests/pode_tests/: config.py  test_cut.py  test_divide.py  test_divide_by_requirements.py  test_divide_by_sites.py  test_from_undirected.py  test_midpoint.py  test_neighbor_edges_vertices.py  test_next_neighbor.py  test_order_by_edge.py  test_order_convex_contour_points.py  test_pred_polys.py  test_requirements.py  test_requirements_per_vertex.py  test_splitter_point.py  test_subgraph.py  test_to_graph.py  test_to_requirements_per_vertex.py  test_to_sites_per_vertex.py
tests/strategies/: __init__.py  common.py  geometry.py  graph.py  graphs.py  sites.py
tests/strategies/geometry/: base.py  composite.py
