[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pode"
version = "0.4.6-alpha"
description = "Implementation of an algorithm for a polygon decomposition by Hert, S. and Lumelsky, V., 1998"
authors = [
    { name = "Georgy Skorobogatov", email = "skorobogatovgeorgy+github@gmail.com" },
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = "^3.10"
dependencies = [
    "gon (>=5.0.0,<6.0.0)",
    "ground (>=8.1.0,<9.0.0)",
    "networkx (>=2.8.8,<3.0.0)",
    "sect (>=6.1.0,<7.0.0)"
]

[dependency-groups]
docs = [
    "Sphinx>=9.1.0,<10.0",
    "sphinx-rtd-theme>=3.1.0,<4.0"
]
dev = [
    "bump-my-version>=0.18.3,<0.19.0",
    "pytest>=7.2.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    # fixed for easier way to reproduce across various machines
    "hypothesis==6.99.1",
    "hypothesis-geometry>=7.3.0,<8.0.0"
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.coverage.run]
source = ["pode"]

[tool.pytest.ini_options]
addopts = "--verbose -s --hypothesis-profile=default"
